Bug 236801 - Stretched and clipped images could yield invalid postscript. r=tor, sr=roc, a=choffman.